refactor: streamline project and harden services